SS: Added login page

--- a/app/style/module/_variables.scss
+++ b/app/style/module/_variables.scss
@@ -9,6 +9,7 @@ $xs: 450px;
 // colors
 $darkblue_1: #001529;
 $darkblue_2: #002140;
+$google_blue: #4285f4;
 $black: #212121;
 $white: #fff;
 $gray: #d9d9d9;
