SS: Fixed base style

--- a/app/style/index.scss
+++ b/app/style/index.scss
@@ -6,12 +6,15 @@
   padding: 0;
   margin: 0;
 }
-
+html {
+  font-size: 10px;
+}
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
   background-color: rgb(22, 27, 34);
+  color: white;
 }
 
 body {
